--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
-Miranda Evans miranda.r.evans@gmail.com
-Kevin Yook kevin.yook@holbertonschool.com
 
-Farrukh Akhrarov farruh1996@gmail.com
-Laura Roudge laura.derohan@gmail.com
+Emmanuel Ufuoma 
+emmanuelejemuta@gmail.com
+
+
+
